2024-XX-XX   3.0.0:
-------------------
  * remove Python 2.7 support
  * `.search()` now returns iterator - equivalent to `.itersearch()`
  * remove `util.rindex()`, use `.index(..., right=1)` instead
  * remove `util.make_endian()`, use `bitarray(..., endian=...)` instead
  * Remove hackish support for `bitarray()` handling unpickling,
    see detailed explaination in #207 - closes #206
  * update cibuildwheel to 2.18.0
  * bump actions/download-artifact from 2 to 4.1.7, #218
  * minor simplifications
  * fix some typos


2024-01-01   2.9.2:
-------------------
  * optimize initialization from strings by not constantly resizing buffer
  * optimize `util.hex2ba()` and `util.base2ba()` by avoiding unnecessary
    copies
  * optimize `util.base2ba()` and `util.ba2base()` for `n=16` (hexadecimal)


2023-12-23   2.9.1:
-------------------
  * avoid buffer being unnecessarily initialized with 0s in several
    functions of the `bitarray.util` module
  * fix `.count()` type hint in pyi-file
  * improve testing


2023-12-17   2.9.0:
-------------------
  * deprecate support for Python 2 - Python 2.7 support will be removed
    in bitarray version 3.0,
    see [roadmap](https://github.com/ilanschnell/bitarray#roadmap)
  * `bitarray(n)` for integer initializer `n` will always return a bitarray
    of length `n` with all items initialized to `0`, see #212
  * allow sub-bitarray in `.count()`, #212
  * add `util.ones()`
  * `.find()` and `.index()`: add keyword argument `right` for rightmost index
  * `.itersearch()`: add start and stop argument, and keyword
    argument `right` (for descending order - starting with rightmost match)
  * deprecate `util.rindex()` (will be removed in 3.0 release),
    use `.index(..., right=True)` instead
  * deprecate `util.make_endian()` (will be removed in 3.0 release),
    use `bitarray(..., endian=...)` instead


2023-12-09   2.8.5:
-------------------
  * speedup unaligned copies by always using word shifts (in combination