@@ -41,8 +41,12 @@ class bitarray:
               stop: int = ...,
               step: int = ...) -> int: ...
 
-    def decode(self, code: Union[CodeDict, decodetree]) -> list: ...
     def encode(self, code: CodeDict, x: Iterable) -> None: ...
+    def decode(self,
+               code: Union[CodeDict, decodetree]) -> Iterator: ...
+    def iterdecode(self,
+                   code: Union[CodeDict, decodetree]) -> Iterator: ...
+
     def endian(self) -> str: ...
     def extend(self, x: Union[str, Iterable[int]]) -> None: ...
     def fill(self) -> int: ...
@@ -62,8 +66,6 @@ class bitarray:
 
     def insert(self, i: int, value: int) -> None: ...
     def invert(self, i: int = ...) -> None: ...
-    def iterdecode(self,
-                   code: Union[CodeDict, decodetree]) -> Iterator: ...
 
     def search(self,
                sub_bitarray: Union[bitarray, int],
